# muscpy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  readme.md  requirements.txt  start_muscpy.py  ytdlp_test.py
.github/: FUNDING.yml
.github/workflows/: docker-image.yml
src/: bot_main.py  load_env.py  main.py  utils.py  yt_dlp_streamer.py
src/muscpy/: __main__.py  bot_main.py  config.py  idle_checker.py  load_env.py  utils.py  yt_dlp_streamer.py
